<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/name_text"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center" />


        <ImageView
            android:id="@+id/yellow_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            app:srcCompat="@android:drawable/btn_star" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/name_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/hint_nickname"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_string" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/name_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="@dimen/small_space"
                    android:paddingStart="@dimen/padding_r8"
                    android:paddingEnd="@dimen/padding_r8"
                    android:text="@string/bio_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>